--- a/yoda/tensorflow/mnist.yaml
+++ b/yoda/tensorflow/mnist.yaml
@@ -4,12 +4,10 @@ dataset: 'mnist_data'
 model_train: 'mni_cnn'
 
 
-gpu_num: "3"
-attack_method: 'FGSM'
+gpu_num: "2, 3"
+attack_method: 'CW'
 
 MNIST_checkpoint_path: 'model/mnist_model'
 HARD_MNIST_checkpoint_path: 'model/hard_mnist_model'
 
-DATASET_path: 'dataset/fgsm'
-
-attack_eps: 0.1
+attack_eps: 0.2
