--- a/yoda/tensorflow/mnist.yaml
+++ b/yoda/tensorflow/mnist.yaml
@@ -5,7 +5,7 @@ model_train: 'mni_cnn'
 
 
 gpu_num: "2, 3"
-attack_method: 'CW'
+attack_method: 'MIM'
 
 MNIST_checkpoint_path: 'model/mnist_model'
 HARD_MNIST_checkpoint_path: 'model/hard_mnist_model'
