--- a/yoda/tensorflow/mnist.yaml
+++ b/yoda/tensorflow/mnist.yaml
@@ -1,9 +1,10 @@
 batch_size: 64
 
-dataset: 'cifar10' # cifar10
+dataset: 'mnist' # cifar10
 
 # model.py 참조
-model_train: 'cifar_vgg16' 
+model_train: 'mnist_cnn'
+# model_train: 'cifar_vgg16' 
 
 
 gpu_num: "2, 3"
