--- a/yoda/pytorch/params.yaml
+++ b/yoda/pytorch/params.yaml
@@ -1,7 +1,20 @@
-dataset_name: 'mnist'
-model_name: 'mnist_model'
+# dataset_name: 'mnist'
+# model_name: 'mnist_model'
 
-epoch_count: 10
-learning_rate: 0.001
-batch_size: 128
-gpu_num: '2'
+# epoch_count: 10
+# learning_rate: 0.001
+# batch_size: 128
+
+attack_type: 'FGSM'
+attack_eps: 0.5
+
+xai_type: 'saliency'
+
+gpu_num: "2, 3"
+
+epoch: 15
+batch_size: 32
+test_batch_size: 1000
+learning_rate: 0.01
+
+batch_one: 1
